fix alignment

--- a/themes/future-imperfect/assets/sass/components/_post.scss
+++ b/themes/future-imperfect/assets/sass/components/_post.scss
@@ -94,7 +94,7 @@
 				cursor: default;
 				list-style: none;
 				padding: 0;
-
+				text-align: right;
 				li {
 					border-left: solid 1px _palette(border);
 					display: inline-block;
